# satyarepro

./: .env.example  CLAUDE.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_notebook.ipynb
satyarepro/: cli.py  config.py  types.py
satyarepro/agent/: __init__.py  orchestrator.py
satyarepro/api/: app.py  schemas.py
satyarepro/api/routers/: audit.py  health.py
satyarepro/client/: __init__.py  base.py  claude.py  mock.py
satyarepro/tools/: __init__.py  _utils.py  base.py
satyarepro/tools/layer1/: __init__.py  checkpoint_check.py  dependency_check.py  seed_check.py  split_check.py
satyarepro/tools/layer2/: __init__.py  leakage_detector.py  provenance_checker.py  subgroup_reporter.py
satyarepro/tools/parsers/: __init__.py  notebook_parser.py  repo_fetcher.py  script_parser.py
satyarepro/tools/reports/: __init__.py  dmsp_generator.py  tripod_ai_generator.py
testing_notebooks/: 03-model-selection.ipynb
tests/: test_api.py  test_client.py  test_tools.py
