[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satyarepro"
version = "0.1.0"
description = "Agentic AI tool for biomedical reproducibility auditing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
]

[project.scripts]
satyarepro = "satyarepro.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
